--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,8 @@
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/preset-env": "^7.3.1",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
     "nodemon": "^1.18.10",
     "rimraf": "^2.6.3"
   }
